# wheelchair-navigation

./: .gitignore  ArduinoCode.cpp  Esp32code.cpp  OBSTACLE_LAYER_CONFIG.md  _diff_nav2_params.yaml  frames_2026-06-14_14.05.49.gv  frames_2026-06-14_14.06.05.gv  frames_2026-06-14_14.39.59.gv  frames_2026-06-20_19.18.08.gv  frames_2026-06-20_19.21.31.gv
src/firebase_bridge/: package.xml  setup.py
src/firebase_bridge/firebase_bridge/: firebase_listener.py  firebase_publisher.py  goal_bridge.py
src/firebase_bridge/launch/: firebase_bridge.launch.py
src/my_robot_pkg/: README.md  navigation_test.py  package.xml  setup.py
src/my_robot_pkg/config/: navigation.rviz
src/my_robot_pkg/launch/: chair_control.launch.py  navigation.launch.py  robot_system.launch.py  vision_system.launch.py
src/my_robot_pkg/msg/: ChairStatus.msg  EncoderData.msg  PersonEvent.msg  SpeakerControl.msg
src/my_robot_pkg/my_robot_pkg/: gate_controller.py  goal_sender_node.py  human_position_node.py  odom_localizer.py  path_receiver_node.py  person_tracker_node.py  pure_pursuit_controller_node.py  pwm_conversion_node.py  speaker_node.py
src/nurse_follow/: package.xml  setup.cfg  setup.py
src/nurse_follow/nurse_follow/: follow_controller.py  person_detector.py
src/robotdesign/: model.config  package.xml  setup.cfg  setup.py
src/robotdesign/config/: joint_names_robotdesign.yaml
src/robotdesign/launch/: hospital.launch.py  urdf.launch.py
src/wheelchair_bringup/: package.xml  setup.py
src/wheelchair_mapping_pkg/: README.md  package.xml  requirements_adapter.txt  setup.cfg  setup.py
(+81 files in other folders)
